Formオブジェクトのバリデーションを翻訳した

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,3 +18,12 @@ ja:
        shipping_id: 配送料の負担
        item_status_id: 商品の状態
        price: 値段
+ activemodel:
+   attributes:
+     shopping:
+       address: 番地
+       city: 市区町村
+       prefecture_id: 都道府県
+       zip_code: 郵便番号
+       phone_num: 電話番号
+       token: カード情報
