削除メッセージを翻訳

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -44,6 +44,7 @@ ja:
       timeout: セッションがタイムアウトしました。もう一度ログインしてください。
       unauthenticated: アカウント登録もしくはログインしてください。
       unconfirmed: メールアドレスの本人確認が必要です。
+      delete_account: このアカウントは既に削除されています。
     mailer:
       confirmation_instructions:
         action: メールアドレスの確認
